--- a/css/black-jack.css
+++ b/css/black-jack.css
@@ -40,11 +40,13 @@ body {
     top: 25%;
     left: 50%;
     transform: translate(-40%, -50%);
+    text-align: center;
 }
 
 .heading-primary {
     color: #fff;
     text-transform: uppercase;
+    margin-bottom: 15px;
 }
 
 .heading-primary-main {
@@ -96,4 +98,29 @@ body {
         transform: translateX(0);
         opacity: 1;
     }
+}
+
+.btn:link,
+.btn:visited {
+    text-transform: uppercase;
+    text-decoration: none;
+    display: inline-block;
+    padding: 15px;
+    border-radius: 90px;
+}
+
+.btn:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, .3);
+}
+
+.btn:active {
+    transform: translateY(-1px);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, .3);
+
+}
+
+.btn-white {
+    background-color: #fff;
+    color: #777;
 }
