--- a/css/black-jack.css
+++ b/css/black-jack.css
@@ -1,12 +1,3 @@
-/*
-COLORS:
-
-Light green: #7ed56f
-Medium green: #55c57a
-Dark green: #28b485
-
-*/
-
 * {
     margin: 0;
     padding: 0;
@@ -20,7 +11,9 @@ body {
     line-height: 1.7;
     color: #777;
     padding: 30px;
-    background-color: darkgreen;
+    /* Gradien generator https://cssgradient.io/ */
+    background: rgb(21, 109, 129);
+    background: radial-gradient(circle, rgba(21, 109, 129, 1) 0%, rgba(18, 87, 102, 1) 35%, rgba(5, 60, 73, 1) 100%);
 }
 
 .welcome {
@@ -31,13 +24,30 @@ body {
     background-size: cover;
     background-position: top;
     position: relative;
-    clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+
+    /* clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%); */
+    border: #777;
+    border-radius: 30px;
+
 }
 
+.welcome-out {
+    animation: welcomeHide 1.1s ease-out;
+}
+
+@keyframes welcomeHide {
+    0% {
+        transform: scale(1);
+    }
+
+    100% {
+        transform: scale(0);
+    }
+}
 
 .text-box {
     position: absolute;
-    top: 25%;
+    top: 35%;
     left: 50%;
     transform: translate(-40%, -50%);
     text-align: center;
@@ -67,6 +77,53 @@ body {
 
     animation: moveInLeft 2s;
 }
+
+.signature {
+    display: inline-block;
+    left: 0;
+    transform: rotate(-15deg);
+    margin-bottom: 30px;
+}
+
+path {
+    fill: black;
+    stroke: black;
+    stroke-dasharray: 380;
+    /* opacity: 10; */
+    /* fill-opacity: 1; */
+    animation: animate 3s ease-in;
+    animation-delay: 1.8s;
+    animation-fill-mode: backwards
+}
+
+
+@keyframes animate {
+    0% {
+        opacity: 1;
+        fill-opacity: 0;
+        stroke-dashoffset: 380;
+    }
+
+    30% {
+        opacity: 10;
+        fill-opacity: 0.1;
+        stroke-dashoffset: 280;
+    }
+
+    80% {
+        opacity: 10;
+        fill-opacity: 0.1;
+        stroke-dashoffset: 90;
+    }
+
+    100% {
+        opacity: 10;
+        fill-opacity: 1;
+        stroke-dashoffset: 0;
+    }
+
+}
+
 
 @keyframes moveInRight {
     0% {
