--- a/css/black-jack.css
+++ b/css/black-jack.css
@@ -1,16 +1,23 @@
-* {
+*,
+*::after,
+*::before {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    box-sizing: inherit;
+}
+
+html {
+    font-size: 62.5%;
 }
 
 body {
+    box-sizing: border-box;
     font-family: "Lato", sans-serif;
     font-weight: 400;
-    font-size: 16px;
+    font-size: 1.6rem;
     line-height: 1.7;
     color: #777;
-    padding: 30px;
+    padding: 3rem;
     /* Gradien generator https://cssgradient.io/ */
     background: rgb(21, 109, 129);
     background: radial-gradient(circle, rgba(21, 109, 129, 1) 0%, rgba(18, 87, 102, 1) 35%, rgba(5, 60, 73, 1) 100%);
@@ -18,16 +25,19 @@ body {
 
 .welcome {
     height: 95vh;
+    width: 95%;
     background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8),
         rgba(40, 180, 133, 0.8)), url(../img/background-intro-black-jack.jpg);
     /* Add backgound video */
     background-size: cover;
     background-position: top;
-    position: relative;
+    position: absolute;
+    top: 2%;
 
     /* clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%); */
     border: #777;
-    border-radius: 30px;
+    border-radius: 3rem;
+    z-index: 99;
 
 }
 
@@ -38,10 +48,14 @@ body {
 @keyframes welcomeHide {
     0% {
         transform: scale(1);
+        opacity: 1;
+        z-index: 1;
     }
 
     100% {
         transform: scale(0);
+        opacity: 0;
+        z-index: -1;
     }
 }
 
@@ -56,14 +70,14 @@ body {
 .heading-primary {
     color: #fff;
     text-transform: uppercase;
-    margin-bottom: 15px;
+    margin-bottom: 1.5rem;
 }
 
 .heading-primary-main {
     display: block;
-    font-size: 70px;
+    font-size: 7rem;
     font-weight: 400;
-    letter-spacing: 35px;
+    letter-spacing: 3.5rem;
     text-align: center;
 
     animation: moveInRight 2s;
@@ -71,9 +85,9 @@ body {
 
 .heading-primary-sub {
     display: block;
-    font-size: 20px;
+    font-size: 2rem;
     font-weight: 700;
-    letter-spacing: 17.4px;
+    letter-spacing: 1.74rem;
 
     animation: moveInLeft 2s;
 }
@@ -82,7 +96,7 @@ body {
     display: inline-block;
     left: 0;
     transform: rotate(-15deg);
-    margin-bottom: 30px;
+    margin-bottom: 3rem;
 }
 
 path {
@@ -128,11 +142,11 @@ path {
 @keyframes moveInRight {
     0% {
         opacity: 0;
-        transform: translateX(-200px);
+        transform: translateX(-20rem);
     }
 
     80% {
-        transform: translateX(20px);
+        transform: translateX(2rem);
     }
 
     100% {
@@ -144,11 +158,11 @@ path {
 @keyframes moveInLeft {
     0% {
         opacity: 0;
-        transform: translateX(200px);
+        transform: translateX(20rempx);
     }
 
     80% {
-        transform: translateX(-20px);
+        transform: translateX(-2rem);
     }
 
     100% {
@@ -160,7 +174,7 @@ path {
 @keyframes moveInBottom {
     0% {
         opacity: 0;
-        transform: translateY(20px);
+        transform: translateY(2rem);
     }
 
     100% {
@@ -169,24 +183,33 @@ path {
     }
 }
 
+.game-buttons {
+    position: absolute;
+    left: 27%;
+    top: 46%;
+}
+
 .btn:link,
-.btn:visited {
+.btn:visited,
+.btn {
     text-transform: uppercase;
     text-decoration: none;
     display: inline-block;
-    padding: 15px;
-    border-radius: 90px;
+    padding: 1.5rem;
+    border-radius: 9rem;
     transition: all .2s;
     position: relative;
+    font-size: 1.6rem;
+    min-width: 10rem;
 }
 
 .btn:hover {
-    transform: translateY(-3px);
+    transform: translateY(-.3rem);
     box-shadow: 0 10px 20px rgba(0, 0, 0, .3);
 }
 
 .btn:active {
-    transform: translateY(-1px);
+    transform: translateY(-.1rem);
     box-shadow: 0 5px 10px rgba(0, 0, 0, .3);
 
 }
@@ -201,7 +224,7 @@ path {
     display: inline-block;
     height: 100%;
     width: 100%;
-    border-radius: 90px;
+    border-radius: 9rem;
     position: absolute;
     top: 0;
     left: 0;
@@ -221,4 +244,78 @@ path {
 .btn-animated {
     animation: moveInBottom .5s ease-out 1.5s;
     animation-fill-mode: backwards;
+}
+
+.game {
+    display: inline-block;
+    width: 100%;
+}
+
+.game-mat {
+    display: inline-block;
+    border: .3rem solid #777;
+    border-radius: 9rem;
+    width: 70%;
+    height: 85vh;
+    background: rgb(18, 102, 59);
+    background: radial-gradient(circle, rgba(18, 102, 59, 1) 0%, rgba(55, 172, 111, 1) 0%, rgba(18, 102, 59, 1) 100%);
+    margin-right: 2rem;
+}
+
+.black-jack {
+    font-weight: 800;
+    font-size: 6rem;
+    color: rgba(60, 178, 113, 0.36);
+    text-transform: uppercase;
+
+    position: absolute;
+    top: 7%;
+    left: 23%;
+}
+
+.players-info {
+
+    display: inline-block;
+    position: absolute;
+    border: .3rem solid #777;
+    border-radius: 3rem;
+    background: #fff;
+    width: 25%;
+    height: 85vh
+}
+
+.statistics {
+    text-align: center;
+    text-transform: uppercase;
+    padding-top: 1.5rem;
+    padding-bottom: 3rem;
+}
+
+.user-info {
+    margin: auto;
+}
+
+.card {
+    box-shadow: 0 .4rem .8rem 0 rgba(0, 0, 0, 0.2);
+    max-width: 30rem;
+    margin: auto;
+    margin-bottom: 2.5rem;
+    text-align: center;
+}
+
+.score {
+    color: grey;
+    font-size: 1.6rem;
+}
+
+.result {
+    font-family: 'Kaushan Script';
+    z-index: 2;
+    font-size: .1rem;
+    text-align: center;
+    position: absolute;
+    color: red;
+    top: 3rem;
+    opacity: 0;
+    left: 30rem;
 }
